argo/voting/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: voting
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
    - name: redis-service
      port: 6379
      targetPort: 6379
  selector:
    app: redis
