argo/voting/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: voting
  labels:
    app: result
spec:
  type: ClusterIP
  ports:
    - name: http-result
      port: 8081
      targetPort: 80
  selector:
    app: result
