argo/voting/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  namespace: voting
  labels:
    app: vote
spec:
  type: ClusterIP
  ports:
    - name: http-vote
      port: 8080
      targetPort: 80
  selector:
    app: vote
---
apiVersion: v1
kind: Service
metadata:
  name: vote-preview
  namespace: voting
  labels:
    app: vote
spec:
  type: ClusterIP
  ports:
    - name: http-vote
      port: 8080
      targetPort: 80
  selector:
    app: vote
