argo/voting/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: voting-app-routes
  namespace: voting
spec:
  parentRefs:
    - name: voting-gateway
      namespace: voting
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /result
      backendRefs:
        - name: result
          port: 8081
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vote
          port: 8080
          weight: 100
        - name: vote-preview
          port: 8080
          weight: 0
