argo/voting/frontend-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-public-web-traffic
  namespace: voting
spec:
  podSelector:
    matchExpressions:
    - {key: app, operator: In, values: [vote, result]} 
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 80
