argo/voting/worker-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress-to-worker
  namespace: voting
spec:
  podSelector:
    matchLabels:
      app: worker
  policyTypes:
  - Ingress
